--- a/webapp/templates/webapp/header.html
+++ b/webapp/templates/webapp/header.html
@@ -3,6 +3,8 @@
 <head>
   <title>FacebookLikes</title>
   <meta charset="utf-8">
+  {% load staticfiles %}
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css" />
 </head>
 
 <body class="body" style="background-color:#f6f6f6">
