--- a/frontend/src/assets/scss/now-ui-dashboard/react/custom/_sidebar-and-main-panel.scss
+++ b/frontend/src/assets/scss/now-ui-dashboard/react/custom/_sidebar-and-main-panel.scss
@@ -338,6 +338,17 @@
     }
 }
 
+.main-login {
+  background-color: #ebecf1;
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+}
 
 .main-panel{
     position: relative;
